--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="job_intent_service">Job Intent Service</string>
     <string name="alarm_manager">Alarm Manager</string>
     <string name="work_manager">Work Manager</string>
+    <string name="permission_denied">Permission denied</string>
+    <string name="permission_denied_forever_message">You have denied permissions forever. You can change your decision in the app settings.\\n\\nWould you like to open app settings?</string>
+    <string name="open">Open</string>
+    <string name="permission_required">Notification permission required</string>
+    <string name="permission_denied_forever">Permission denied forever</string>
 </resources>
